# codeprompt

./: README.md  pyproject.toml
Templates/: codeprompt.jinja  codeprompt.md  codeprompt2.jinja
codeprompt/: codeprompt.py  promptstr.py  template.py
codeprompt/techniques/: chunk.py  count_token.py
pyprompt/: chatgpt_models.py  cli.py  codeprompt.py  promptstr.py  template.py
pyprompt/techniques/: count_token.py
